--- a/tests.html
+++ b/tests.html
@@ -8,7 +8,7 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="JSIQ.js"></script>
+  <script src="jsiq.js"></script>
 
   <script src="http://code.jquery.com/qunit/qunit-git.js"></script>
   <script src="tests.js"></script>
